Update the backends to Spring Boot 3.3
Seems to work so far, but I was unable to test the policy-mgmt because
the frontend doesn't work anymore on my machine.

I also had to remove the circuitbreaker since the project was discontinued
and I didn't feel like investing the time to migrate to a different project